utoipa-gen/tests/snapshots/path_derive_rocket__derive_rocket_path_with_query_params_in_option.snap
---
source: utoipa-gen/tests/path_derive_rocket.rs
expression: value
snapshot_kind: text
---
{
  "operationId": "list_items",
  "parameters": [
    {
      "in": "query",
      "name": "page",
      "required": true,
      "schema": {
        "format": "int64",
        "minimum": 0,
        "type": "integer"
      },
      "style": "form"
    },
    {
      "in": "query",
      "name": "per_page",
      "required": true,
      "schema": {
        "format": "int64",
        "minimum": 0,
        "type": "integer"
      },
      "style": "form"
    }
  ],
  "responses": {
    "200": {
      "content": {
        "application/json": {
          "schema": {
            "default": null
          }
        }
      }
    },
    "400": {
      "content": {
        "application/json": {
          "schema": {
            "default": null
          }
        }
      }
    }
  }
}
