utoipa-gen/tests/snapshots/path_derive_rocket__path_with_all_args_and_body-2.snap
---
source: utoipa-gen/tests/path_derive_rocket.rs
expression: "&operation.pointer(\"/requestBody\")"
snapshot_kind: text
---
{
  "content": {
    "application/json": {
      "schema": {
        "$ref": "#/components/schemas/Hello"
      }
    }
  },
  "required": true
}
