utoipa-gen/tests/snapshots/path_derive_rocket__path_with_enum_path_param.snap
---
source: utoipa-gen/tests/path_derive_rocket.rs
expression: "operation.pointer(\"/parameters\")"
snapshot_kind: text
---
[
  {
    "description": "",
    "in": "path",
    "name": "api_version",
    "required": true,
    "schema": {
      "enum": [
        "V1"
      ],
      "type": "string"
    }
  }
]
