utoipa-gen/tests/snapshots/path_derive_rocket__resolve_get_with_optional_query_args.snap
---
source: utoipa-gen/tests/path_derive_rocket.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "in": "query",
    "name": "colors",
    "required": false,
    "schema": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  }
]
