utoipa-gen/tests/snapshots/path_derive_rocket__resolve_path_query_params_from_form.snap
---
source: utoipa-gen/tests/path_derive_rocket.rs
expression: parameters
snapshot_kind: text
---
[
  {
    "description": "Hello id",
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "format": "int32",
      "type": "integer"
    }
  },
  {
    "in": "query",
    "name": "foo",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "bar",
    "required": true,
    "schema": {
      "format": "int64",
      "type": "integer"
    }
  }
]
